--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,7 @@
   "image": "mcr.microsoft.com/devcontainers/universal:2",
   "features": {
  "ghcr.io/devcontainers-contrib/features/express-generator:2": {
-    "version" : "lastes"
+    "version" : "latest"
   }
   }
 }
